--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="gallery-services">
       		<figure>
 	            <figcaption>SEO Content</figcaption>
-	            <img src="Images/seo-content.jpg" alt="seo content">
+	            <img src="seo-content.jpg" alt="seo content">
         	</figure> 
 
        	 <figure> 
