--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
   	  	<!---Site Logo-->
         <a href="index.html" >
-          <img src="Images/logo.jpg" alt="site logo" class="logo">
+          <img src="logo.jpg" alt="site logo" class="logo">
         </a>
 
     		<!--Navigation Bar-->
@@ -24,7 +24,7 @@
 
     <!--Main Content-->
     <h1>Freelance Content Writer</h1>
-    	<img src="https://images.pexels.com/photos/4069535/pexels-photo-4069535.jpeg" width="" alt="home office">
+    	<img src="https://images.pexels.com/photos/4069535/pexels-photo-4069535.jpeg" alt="home office">
     <h2>Content Writing Services for Busy Founders and Teams</h2>
 
     <h2>I help Busy Founders and Small Teams with Done-For-You Content</h2>
@@ -53,17 +53,17 @@
 
        	 <figure> 
             <figcaption>Technical Content Writing</figcaption>
-            <img src="Images/technical-content.jpg" alt="technical content writing">
+            <img src="technical-content.jpg" alt="technical content writing">
         </figure> 
 
         <figure> 
             <figcaption>Social Posts</figcaption>
-            <img src="Images/social-posts.jpg" alt="social media content">
+            <img src="social-posts.jpg" alt="social media content">
         </figure> 
 
         <figure> 
             <figcaption>Founder Support/Ghostwriting</figcaption>
-            <img src="Images/ghostwriting.jpg" alt="ghostwriting content services">
+            <img src="ghostwriting.jpg" alt="ghostwriting content services">
         </figure> 
       </section>
 			<!--- Div Container for Portfolio CTA --->
