--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
       <header>
      		<!---Site Logo-->
         <a href="index.html" >
-					<img src="Images/logo.jpg" alt="site logo" class="logo">
+					<img src="logo.jpg" alt="site logo" class="logo">
         </a>
 
     <!--Navigation Bar-->
