--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
       <header>
     <!--- Clickable Site Logo-->
-        <a href="index.html" >
-					<img src="Images/logo.jpg" alt="site logo" class="logo">
+        <a href="index.html">
+			<img src="logo.jpg" alt="site logo" class="logo">
         </a>
 
     <!--Navigation Bar-->
@@ -49,22 +49,22 @@
       <section id="gallery-services">
         <figure class="service-item">
             <figcaption>SEO Content</figcaption>
-            <img src="Images/seo-content.jpg" alt="seo content">
+            <img src="seo-content.jpg" alt="seo content">
         </figure> 
 
         <figure class="service-item"> 
             <figcaption>Technical Content Writing</figcaption>
-            <img src="Images/technical-content.jpg" alt="technical content writing">
+            <img src="technical-content.jpg" alt="technical content writing">
         </figure> 
 
         <figure class="service-item"> 
             <figcaption>Social Posts</figcaption>
-            <img src="Images/social-posts.jpg" alt="social media content">
+            <img src="social-posts.jpg" alt="social media content">
         </figure> 
 
         <figure class="service-item"> 
             <figcaption>Founder Support</figcaption>
-            <img src="Images/ghostwriting.jpg" alt="ghostwriting content services">
+            <img src="ghostwriting.jpg" alt="ghostwriting content services">
         </figure> 
       </section>
 			<div class="bttn-container">
