--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <header>
     <!---Clickable site Logo-->
         <a href="index.html" >
-					<img src="Images/logo.jpg" alt="site logo" class="logo">
+					<img src="logo.jpg" alt="site logo" class="logo">
         </a>
 
     <!--Navigation Bar-->
@@ -24,7 +24,7 @@
 
       <h1>Contact Me</h1>
       <img src="https://images.pexels.com/photos/6362/man-coffee-smartphone-working-6362.jpg" class="deco-img" alt="person holding a phone">
-      <p>Fill out the form below if you have any questions, interested in subscribing to a monthly package or if you just want to pop in and say Hi!</p>
+      <p>Fill out the form below if you have any questions, interested in subscribing to a monthly package, or if you just want to pop in and say Hi!</p>
 
       <!--- Form Content --->
       <form id="submitForm" method="POST" onsubmit="return submitForm()">
