--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><b>Clear, results-driven content:</b> I break-down complex topics into content your audience actually wants to read and can understand.</li>
       </ul>
             
-    <p>Ready to block off that extra time on your calendar and have some peace of mind</p>
+    <p>Ready to block off that extra time on your calendar and have some peace of mind?</p>
     
     <!---Div container for CTA Button-->
     <div class="bttn-container">
